[package]
name = "ai-wot"
version = "0.1.0"
edition = "2021"
description = "High-performance trust scoring engine for the ai.wot protocol"
license = "MIT"
repository = "https://github.com/jeletor/ai-wot-rs"

[lib]
name = "ai_wot"
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scoring"
harness = false
